cabal-version:      3.0
name:               ghc-exactprint-syntax-orphans
version:            0.1.0.0
synopsis:           Orphan instances used in ghc-exactprint-syntax
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        GHC.ExactPrint.QQ.Orphans
    build-depends:
        base ^>=4.18 && <4.19,
        ghc >=9.6 && <9.8,
        template-haskell
    hs-source-dirs:   src
    default-language: GHC2021
