cabal-version:      3.0
name:               ghc-exactprint-syntax
version:            0.1.0.0
synopsis:           Haskell syntax builders with exact-print annotations
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        GHC.ExactPrint.AntiQuote
        GHC.ExactPrint.QQ
    build-depends:
        base ^>=4.18 && <4.19,
        ghc >=9.6 && <9.8,
        ghc-exactprint,
        ghc-exactprint-syntax-orphans,
        ghc-paths,
        syb,
        template-haskell
    hs-source-dirs:   src
    default-language: GHC2021

executable ghc-exactprint-syntax-example
    import:           warnings
    hs-source-dirs:   example
    main-is:          Main.hs
    build-depends:
        base ^>=4.18 && <4.19,
        ghc-exactprint,
        ghc-exactprint-syntax,
        template-haskell
    default-language: GHC2021
