cabal-version:      3.0
name:               ghc-exactprint-transform
version:            0.1.0.0
synopsis:           Haskell syntax transformations using ghc-exactprint
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        GHC.ExactPrint.Debug
        GHC.ExactPrint.Transform
    build-depends:
        base ^>=4.18 && <4.19,
        ghc >=9.6 && <9.8,
        ghc-exactprint,
        ghc-lens,
        lens
    hs-source-dirs:   src
    default-language: GHC2021

executable ghc-exactprint-dump
    import:           warnings
    hs-source-dirs:   ghc-exactprint-dump
    main-is:          Main.hs
    build-depends:
        base ^>=4.18 && <4.19,
        ghc >=9.6 && <9.8,
        ghc-exactprint,
        ghc-exactprint-transform,
        ghc-paths,
        optparse-applicative
    default-language: GHC2021
